--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,9 @@
 :root {
   --primary-color: #333333;
-  --secondary-color: #c4c4c4;
+  --secondary-color: #9a9a9a;
+  --tertiary-color: #c4c4c4;
+  --POSITIVE-color: #21ce71;
+  --NEGATIVE-color: #f05056;
 }
 @font-face {
   font-family: "Futura";
