--- a/src/components/cores/date-picker/date-picker.module.scss
+++ b/src/components/cores/date-picker/date-picker.module.scss
@@ -6,7 +6,7 @@
     }
     &-bottom {
       padding: 12px;
-      border-top: 1px solid var(--secondary-color);
+      border-top: 1px solid var(--tertiary-color);
       display: flex;
       align-items: center;
       justify-content: space-between;
