--- a/src/components/cores/dropdown/dropdown.module.scss
+++ b/src/components/cores/dropdown/dropdown.module.scss
@@ -22,7 +22,7 @@
     position: absolute;
     right: 0;
     background-color: white;
-    border: 1px solid var(--secondary-color);
+    border: 1px solid var(--tertiary-color);
     border-radius: 10px;
     z-index: 10;
     &-open {
