--- a/src/App.scss
+++ b/src/App.scss
@@ -49,7 +49,6 @@
   background-color: white;
   box-shadow: 3px 5px rgba($color: #333333, $alpha: 0.2);
   border-radius: 10px;
-  cursor: pointer;
   h3 {
     font-size: 36px;
     margin: 0;
@@ -61,6 +60,14 @@
   }
   small {
     color: var(--tertiary-color);
+  }
+}
+.widget-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 12px;
+  > div {
+    font-size: 18px;
   }
 }
 .rdrInputRanges {
