--- a/src/components/cores/button/button.module.scss
+++ b/src/components/cores/button/button.module.scss
@@ -12,7 +12,7 @@
   }
   &-default {
     background-color: white;
-    box-shadow: 3px 5px rgba($color: #333333, $alpha: 0.2);
+    box-shadow: 2px 2px rgba($color: #333333, $alpha: 0.2);
     &:hover {
       background-color: var(--primary-color);
       color: white;
@@ -20,6 +20,15 @@
         fill: white;
       }
     }
+  }
+  &-disabled {
+    background-color: #dadada;
+    opacity: 0.3;
+    border-color: transparent;
+  }
+  &-border {
+    border: 1px solid var(--secondary-color);
+    box-shadow: none;
   }
   &-secondary {
     padding: 4px 8px;
