--- a/src/components/modules/classifications/classifications.module.scss
+++ b/src/components/modules/classifications/classifications.module.scss
@@ -1,3 +1,5 @@
+@use "src/styles/variables";
+
 .classifications {
   > span {
     display: flex;
@@ -9,13 +11,16 @@
     display: flex;
     height: 110px;
     overflow: hidden;
-
+    @media (max-width: variables.$breakpoint-xl) {
+      height: 80px;
+    }
     > div {
       height: 100%;
       display: flex;
       align-items: flex-end;
       justify-content: flex-end;
       color: white;
+
       > span {
         margin-right: 8px;
         margin-bottom: 8px;
