--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,13 @@
+@use "src/styles/variables";
+
 .container {
   width: 90%;
-  margin: 0 auto;
-  padding: 36px 0;
+  margin: 36px auto;
+  @media (max-width: variables.$breakpoint-lg) {
+    * {
+      font-size: 13px;
+    }
+  }
 }
 .layout {
   display: flex;
@@ -9,11 +15,16 @@
   &-sidebar {
     background-color: var(--primary-color);
     width: 280px;
+    @media (max-width: variables.$breakpoint-lg) {
+      width: 230px;
+    }
   }
   &-body {
     background-color: #f5f5f5;
     width: calc(100% - 280px);
-    // width: 100%;
+    @media (max-width: variables.$breakpoint-lg) {
+      width: calc(100% - 230px);
+    }
   }
   &-content {
     margin-top: 48px;
@@ -29,6 +40,9 @@
     > h1 {
       margin: 0;
       font-size: 28px;
+      @media (max-width: variables.$breakpoint-lg) {
+        font-size: 24px;
+      }
     }
     &-btn {
       display: flex;
@@ -49,14 +63,21 @@
   background-color: white;
   box-shadow: 3px 5px rgba($color: #333333, $alpha: 0.2);
   border-radius: 10px;
+  box-sizing: border-box;
   h3 {
     font-size: 36px;
     margin: 0;
+    @media (max-width: variables.$breakpoint-xl) {
+      font-size: 28px;
+    }
   }
   h6 {
     color: var(--secondary-color);
     margin: 0;
     font-size: 16px;
+    @media (max-width: variables.$breakpoint-xl) {
+      font-size: 13px;
+    }
   }
   small {
     color: var(--tertiary-color);
