--- a/src/components/modules/sidebar/sidebar.module.scss
+++ b/src/components/modules/sidebar/sidebar.module.scss
@@ -1,8 +1,18 @@
+@use "src/styles/variables";
+
 .sidebar {
+  font-size: 20px;
+  @media (max-width: variables.$breakpoint-lg) {
+    font-size: 16px;
+  }
+
   &-logo {
     width: 75%;
     height: 25px;
     margin: auto;
+    @media (max-width: variables.$breakpoint-lg) {
+      height: 20px;
+    }
     > img {
       max-width: 100%;
       height: 100%;
@@ -14,6 +24,11 @@
     padding: 0;
     margin-top: 72px;
     margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    @media (max-width: variables.$breakpoint-lg) {
+      margin-top: 48px;
+    }
     > li {
       margin-bottom: 12px;
     }
