--- a/src/components/modules/classifications/classifications.module.scss
+++ b/src/components/modules/classifications/classifications.module.scss
@@ -9,10 +9,10 @@
     margin: 24px 0;
     border-radius: 5px;
     display: flex;
-    height: 110px;
+    height: 90px;
     overflow: hidden;
-    @media (max-width: variables.$breakpoint-xl) {
-      height: 80px;
+    @media (max-width: variables.$breakpoint-lg) {
+      height: 75px;
     }
     > div {
       height: 100%;
@@ -32,6 +32,7 @@
     justify-content: space-between;
     > div {
       width: 24%;
+      font-size: 80%;
       > span {
         display: block;
         border-radius: 50%;
