--- a/src/components/modules/field-overview/field-overview.module.scss
+++ b/src/components/modules/field-overview/field-overview.module.scss
@@ -1,5 +1,4 @@
 .field-overview {
-  height: 100%;
   border-radius: 10px;
   overflow: hidden;
   &-top {
@@ -9,6 +8,7 @@
     background-size: cover;
     width: 100%;
     height: 55%;
+    position: relative;
   }
   &-players {
     padding: 16px 4px;
@@ -83,5 +83,12 @@
         }
       }
     }
+  }
+  &-replacement {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
   }
 }
