--- a/src/components/cores/button/button.module.scss
+++ b/src/components/cores/button/button.module.scss
@@ -1,4 +1,4 @@
-@use "src/styles/variables";
+@use "src/variables";
 
 .button {
   display: flex;
@@ -15,13 +15,13 @@
     padding: 6px 8px;
   }
   &:hover {
-    border: 1px solid var(--primary-color);
+    border: 1px solid variables.$primary-color;
   }
   &-default {
     background-color: white;
-    box-shadow: 2px 2px rgba($color: #333333, $alpha: 0.2);
+    box-shadow: 2px 2px rgba($color: variables.$primary-color, $alpha: 0.2);
     &:hover {
-      background-color: var(--primary-color);
+      background-color: variables.$primary-color;
       color: white;
       svg path {
         fill: white;
@@ -34,12 +34,12 @@
     border-color: transparent;
   }
   &-border {
-    border: 1px solid var(--secondary-color);
+    border: 1px solid variables.$secondary-color;
     box-shadow: none;
   }
   &-secondary {
     padding: 4px 8px;
-    background-color: var(--primary-color);
+    background-color: variables.$primary-color;
     color: white;
     font-weight: 400;
     font-size: 15px;
