--- a/src/components/cores/player-swap/player-swap.module.scss
+++ b/src/components/cores/player-swap/player-swap.module.scss
@@ -1,3 +1,5 @@
+@use "src/variables";
+
 .player-swap {
   background-color: rgba($color: #000000, $alpha: 0.6);
   height: 100%;
@@ -16,7 +18,7 @@
       width: 100%;
       text-align: center;
       margin-bottom: 16px;
-      color: var(--secondary-color);
+      color: variables.$secondary-color;
       > u {
         font-weight: bold;
       }
@@ -47,7 +49,7 @@
       height: 40px;
       border-radius: 50%;
       margin-bottom: 4px;
-      background-color: var(--primary-color);
+      background-color: variables.$primary-color;
       display: flex;
       align-items: center;
       justify-content: center;
