--- a/src/components/modules/sidebar/sidebar.module.scss
+++ b/src/components/modules/sidebar/sidebar.module.scss
@@ -1,7 +1,7 @@
-@use "src/styles/variables";
+@use "src/variables";
 
 .sidebar {
-  background-color: var(--primary-color);
+  background-color: variables.$primary-color;
   width: 280px;
   transition: width 0.5s ease-in-out;
   @media (max-width: variables.$breakpoint-lg) {
