--- a/src/pages/session-details/session-details.module.scss
+++ b/src/pages/session-details/session-details.module.scss
@@ -1,9 +1,11 @@
-@use "src/styles/variables";
+@use "src/variables";
 
 .session-details {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  &-content {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
   &-left {
     width: 65%;
     display: flex;
@@ -43,6 +45,7 @@
     }
     > div {
       @media (min-width: variables.$breakpoint-xl) {
+        height: calc(50% - 12px);
         &:first-child {
           margin-bottom: 24px;
         }
@@ -56,6 +59,9 @@
     width: 68%;
     @media (max-width: variables.$breakpoint-xl) {
       width: 100%;
+    }
+    > div {
+      height: 100%;
     }
   }
   &-graph {
