--- a/src/pages/coach/coach.module.scss
+++ b/src/pages/coach/coach.module.scss
@@ -5,14 +5,16 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 20px;
     margin-bottom: 32px;
     @media (max-width: variables.$breakpoint-lg) {
       margin-bottom: 24px;
     }
     > div {
       &:first-child {
-        width: 24%;
+        width: 21%;
+        @media (max-width: variables.$breakpoint-xl) {
+          width: 38%;
+        }
         > div {
           height: calc(50% - 12px);
           &:first-child {
@@ -20,9 +22,20 @@
           }
         }
       }
-      &:nth-child(2) {
-        flex: 1;
-      }
+    }
+  }
+  &-right {
+    width: 45%;
+    @media (max-width: variables.$breakpoint-xl) {
+      width: 60%;
+    }
+  }
+  &-graph {
+    margin-top: 24px;
+    width: 68%;
+    @media (max-width: variables.$breakpoint-xl) {
+      width: 100%;
+      order: 2;
     }
   }
 }
