--- a/src/components/modules/header/header.module.scss
+++ b/src/components/modules/header/header.module.scss
@@ -3,6 +3,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  &-left > div:first-child {
+    min-width: 90px;
+  }
   &-right,
   &-left {
     display: flex;
