--- a/src/components/cores/button/button.module.scss
+++ b/src/components/cores/button/button.module.scss
@@ -3,6 +3,7 @@
 .button {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   cursor: pointer;
   background-color: transparent;
   border: 1px solid transparent;
