--- a/src/App.scss
+++ b/src/App.scss
@@ -96,6 +96,37 @@
     font-size: 18px;
   }
 }
+.checkmark {
+  svg {
+    width: 20px;
+    height: 20px;
+    @media (max-width: variables.$breakpoint-lg) {
+      width: 17px;
+      height: 17px;
+    }
+  }
+  &-rotate svg {
+    transform: rotate(45deg);
+  }
+}
+.score {
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  @media (max-width: variables.$breakpoint-lg) {
+    width: 17px;
+    height: 17px;
+  }
+  &-POSITIVE {
+    background-color: variables.$POSITIVE-color;
+  }
+  &-NEGATIVE {
+    background-color: variables.$NEGATIVE-color;
+  }
+  &-NEUTRAL {
+    background-color: #f0e050;
+  }
+}
 input[type="checkbox"] {
   cursor: pointer;
   width: 15px;
