--- a/src/components/cores/type/type.module.scss
+++ b/src/components/cores/type/type.module.scss
@@ -5,7 +5,7 @@
   padding: 4px 8px;
   border-radius: 10px;
   width: fit-content;
-  text-transform: capitalize;
+  text-transform: lowercase;
   font-size: 14px;
   svg {
     vertical-align: bottom;
