fix: started fixing filed overview

--- a/src/components/modules/field-overview/field-overview.module.scss
+++ b/src/components/modules/field-overview/field-overview.module.scss
@@ -3,6 +3,7 @@
 .field-overview {
   border-radius: 10px;
   overflow: hidden;
+  width: 100%;
   &-top {
     background-image: url("../../../../public/img/field.png");
     background-repeat: no-repeat;
