--- a/src/components/cores/player/player.module.scss
+++ b/src/components/cores/player/player.module.scss
@@ -41,13 +41,14 @@
   }
   &-name {
     text-transform: capitalize;
+    text-align: center;
     background-color: rgba($color: #000000, $alpha: 0.3);
     padding: 2px 4px;
     border-radius: 5px;
     color: white;
     width: fit-content;
-    margin: 0 auto;
-    font-size: 13px;
+    margin: 2px auto;
+    font-size: 12px;
     @media (max-width: variables.$breakpoint-lg) {
       font-size: 11px;
     }
