--- a/src/components/modules/field-overview/field-overview.module.scss
+++ b/src/components/modules/field-overview/field-overview.module.scss
@@ -11,7 +11,11 @@
     background-size: cover;
     width: 100%;
     height: 55%;
+    min-height: 400px;
     position: relative;
+    @media (max-width: variables.$breakpoint-lg) {
+      min-height: 340px;
+    }
   }
   &-players {
     padding: 16px 4px;
@@ -20,13 +24,17 @@
     flex-wrap: wrap;
     position: relative;
     > div:not(:last-child) {
-      margin-bottom: 20px;
+      margin-bottom: 24px;
+      @media (max-width: variables.$breakpoint-lg) {
+        margin-bottom: 20px;
+      }
     }
   }
   &-formation {
     position: absolute;
     top: 8px;
     right: 8px;
+    z-index: 100;
     ul {
       font-size: 13px;
       padding: 8px;
