--- a/src/components/cores/dropdown/dropdown.module.scss
+++ b/src/components/cores/dropdown/dropdown.module.scss
@@ -27,7 +27,7 @@
     border: 1px solid variables.$tertiary-color;
     border-radius: 5px;
     z-index: 100;
-    min-width: 100px;
+    white-space: nowrap;
     ul {
       padding: 0;
       margin: 0;
