--- a/src/components/modules/field-overview/field-overview.module.scss
+++ b/src/components/modules/field-overview/field-overview.module.scss
@@ -22,7 +22,6 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    position: relative;
     > div:not(:last-child) {
       margin-bottom: 24px;
       @media (max-width: variables.$breakpoint-lg) {
@@ -37,12 +36,17 @@
     z-index: 100;
     ul {
       font-size: 13px;
-      padding: 8px;
     }
-    > div > div > div {
-      padding: 2px 6px;
-      font-size: 13px;
-      background-color: rgba($color: #000000, $alpha: 0.3);
+
+    > div > div {
+      &:first-child > div {
+        padding: 2px 6px;
+        font-size: 13px;
+        background-color: rgba($color: #000000, $alpha: 0.3);
+      }
+      &:last-child {
+        top: 30px !important;
+      }
     }
   }
   &-gradient {
