--- a/src/components/cores/usage-widget/usage-widget.module.scss
+++ b/src/components/cores/usage-widget/usage-widget.module.scss
@@ -14,6 +14,12 @@
     &-right {
       margin-left: 8px;
       text-align: right;
+      > h3 {
+        font-size: 24px;
+        @media (max-width: variables.$breakpoint-lg) {
+          font-size: 18px;
+        }
+      }
       > div {
         margin-top: 8px;
         text-align: left;
