--- a/src/components/modules/suggestions/suggestions.module.scss
+++ b/src/components/modules/suggestions/suggestions.module.scss
@@ -43,7 +43,7 @@
     > div {
       width: 100%;
       height: 10px;
-      background-color: variables.$tertiary-color;
+      background-color: variables.$NEGATIVE-color;
       border-radius: 5px;
       display: flex;
       overflow: hidden;
