feat: started working on forgot password flow

--- a/src/components/modules/login-form/login-form.module.scss
+++ b/src/components/modules/login-form/login-form.module.scss
@@ -13,7 +13,13 @@
   &-inputs {
     display: flex;
     flex-direction: column;
-    margin-bottom: 16px;
+    margin-bottom: 32px;
+    > div:not(:first-child) {
+      margin-bottom: 4px;
+    }
+    > small a {
+      color: black;
+    }
   }
   &-save {
     > button {
