--- a/src/components/modules/sidebar/sidebar.module.scss
+++ b/src/components/modules/sidebar/sidebar.module.scss
@@ -18,6 +18,7 @@
         justify-content: space-between;
         margin-bottom: 48px;
         > img {
+          cursor: pointer;
           width: 110px;
           transition: width 0.5s ease-in-out;
         }
@@ -50,6 +51,7 @@
       width: 150px;
       height: 100%;
       object-fit: contain;
+      cursor: pointer;
       @media (max-width: variables.$breakpoint-lg) {
         width: 0;
       }
@@ -81,6 +83,7 @@
           transform: rotate(270deg);
           width: 100px;
           object-fit: contain;
+          cursor: pointer;
         }
       }
     }
